uploading old edis

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/DJRobertson95/Puppy-Bowl/issues"
   },
-  "homepage": "https://github.com/DJRobertson95/Puppy-Bowl#readme",
+  "homepage": "/",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
